# swindle_bootloader_gd32

./: .gitignore  CMakeLists.txt  README.md  clang.lld.in  devpod.sh  mcuSelect.cmake  toolchain_arm_gd32fx_clang.cmake
.devcontainer/: Dockerfile  devcontainer.json
arm_gd32fx/: start.cpp
esprit_mini/: lnCpuID_arm_gd32fx.cpp  lnGPIO.cpp  lnRCU.cpp  lnRCU_armgd32.cpp  lnRCU_systemClock_arm_gd32fx.cpp  lowlevel.cpp  systemAlloc.cpp  systemHelper.cpp
esprit_mini/include/: esprit.h  lnBarrier.h  lnCpuID.h  lnFreeRTOS_default.h  lnFreeRTOS_pp.h  lnGPIO.h  lnGPIO_priv.h  lnLWIP.h  lnPeripherals.h  lnRCU.h  lnRCU_priv.h  lnRingBuffer.h  lnSPI.h  lnSPIBidir.h  lnSerial.h  lnSocketRunner.h  lnStopWatch.h  systemHelper.h
linker/: stage2.ld
src/: dfu.cpp  main.cpp
src_common/: memory_config.h.in  registers.h  stubs.cpp  watchdog.h
src_stage1/: ch32_crc.c  main.cpp
src_stage2/: clocking.h  dfu.cpp  dfu_name.h  flash.h  usb.cpp  usb.h  usb_vid_pid.h
